# torminal

./: .gitignore  README.md  pyproject.toml
src/torminal/: __init__.py  cli.py  config.py  data.py  gtfs.py  parser.py  query.py  requests.py  time_utils.py  vehicle_dictionary.csv
src/torminal/gtfs/: data.py  gps.py  realtime.py  static.py  time.py  utils.py
src/torminal/resources/translations/: torminal.en_US.yml  torminal.pl_PL.yml
src/torminal/tui/: app.py  loadingscreen.py  modals.py  style.tcss
src/torminal/tui/widgets/: bollard.py  spinner.py
