[project]
name = "torminal"
version = "0.1.0"
description = "TUI app for monitoring GTFS data"
readme = "README.md"
authors = [
    { name = "Marcel Nowicki", email = "marcel.nowicki94@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "gtfs-realtime-bindings>=2.1.0",
    "requests>=2.34.2",
    "textual>=8.2.8",
]

[project.scripts]
torminal = "torminal.cli:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.mypy]
ignore_missing_imports = true
