[project]
name = "torminal"
version = "0.1.0"
description = "TUI app for monitoring GTFS data"
readme = "README.md"
authors = [
    { name = "Marcel Nowicki", email = "marcel.nowicki94@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "gtfs-realtime-bindings>=2.1.0",
    "httpx>=0.28.1",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
    "textual>=8.2.8",
    "textual-autocomplete>=4.0.6",
    "textual-dev>=1.8.0",
    "tomli-w>=1.2.0",
    "types-protobuf>=7.34.1.20260518",
]

[project.scripts]
torminal = "torminal.cli:app"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.mypy]
ignore_missing_imports = true
